--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -11,6 +11,10 @@ on:
       project-name:
         required: true
         type: string
+    outputs:
+      version:
+        description: The version of the release (without prefix)
+        value: ${{ jobs.create-release.outputs.version }}
 
 jobs:
   create-release:
@@ -18,6 +22,8 @@ jobs:
     runs-on: ubuntu-24.04
     permissions:
       contents: write
+    outputs:
+      version: ${{ steps.version_step.outputs.semVer }}
     steps:
       - name: Checkout
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
