fix: deploy job inherts secrets now (#15)

--- a/.github/workflows/identity.yaml
+++ b/.github/workflows/identity.yaml
@@ -30,6 +30,7 @@ jobs:
     needs: Release
     if: github.ref == 'refs/heads/main'
     uses: ./.github/workflows/deploy-release.yaml
+    secrets: inherit
     with:
       dockerfile: ./Identity/Dockerfile
       project-name: identity
