--- a/Identity/API/RestApi.Controllers/RestApi.Controllers.csproj
+++ b/Identity/API/RestApi.Controllers/RestApi.Controllers.csproj
@@ -12,7 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\Modules\Accounts\Users.Contracts\Users.Contracts.csproj"/>
+        <ProjectReference Include="..\..\Modules\Users\Users.Contracts\Users.Contracts.csproj"/>
     </ItemGroup>
 
 </Project>
