--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -8,7 +8,12 @@
         <PackageVersion Include="FluentValidation" Version="12.1.1"/>
         <PackageVersion Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.1"/>
         <PackageVersion Include="MediatR" Version="14.0.0"/>
+        <PackageVersion Include="Microsoft.AspNetCore.Identity" Version="2.3.9"/>
+        <PackageVersion Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="10.0.3"/>
         <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0"/>
+        <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="10.0.3"/>
+        <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.3"/>
+        <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0"/>
         <PackageVersion Include="OneOf" Version="3.0.271"/>
         <PackageVersion Include="Scalar.AspNetCore" Version="2.12.45"/>
     </ItemGroup>
