--- a/Identity/Modules/Users/Users.Infrastructure/Users.Infrastructure.csproj
+++ b/Identity/Modules/Users/Users.Infrastructure/Users.Infrastructure.csproj
@@ -8,7 +8,13 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\..\..\Shared\Shared.Infrastructure\Shared.Infrastructure.csproj"/>
         <ProjectReference Include="..\Users.Application\Users.Application.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Identity"/>
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore"/>
     </ItemGroup>
 
 </Project>
