feat: added dependabot for nuget packages

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -12,3 +12,8 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+
+  - package-ecosystem: "nuget"
+    directory: "/"
+    schedule:
+      interval: "weekly"
