--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -17,3 +17,6 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+    commit-message:
+      prefix: "chore"
+      include: "scope"
