--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -66,6 +66,12 @@ jobs:
 
             git log "${PREVIOUS_TAG}".. --grep="^fix" --pretty=format:"- %s by @%an" ${{ inputs.project-directory }}
             echo ""
+
+            echo "### Dependency Updates"
+            echo ""
+
+            git log "${PREVIOUS_TAG}".. --grep="^chore(deps)" --pretty=format:"- %s by @%an" ${{ inputs.project-directory }}
+            echo ""
           } >> CHANGELOG.md
 
       - name: Create Release
