--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -5,6 +5,7 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageVersion Include="Aspire.Hosting.PostgreSQL" Version="13.1.1"/>
+        <PackageVersion Include="coverlet.collector" Version="8.0.0"/>
         <PackageVersion Include="FluentValidation" Version="12.1.1"/>
         <PackageVersion Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.1"/>
         <PackageVersion Include="MediatR" Version="14.0.0"/>
@@ -13,7 +14,12 @@
         <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="10.0.3"/>
         <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="10.0.3"/>
         <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.3"/>
+        <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="18.0.1"/>
+        <PackageVersion Include="Moq" Version="4.20.72"/>
         <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0"/>
+        <PackageVersion Include="NUnit" Version="4.5.0"/>
+        <PackageVersion Include="NUnit.Analyzers" Version="4.11.2"/>
+        <PackageVersion Include="NUnit3TestAdapter" Version="6.1.0"/>
         <PackageVersion Include="OneOf" Version="3.0.271"/>
         <PackageVersion Include="Scalar.AspNetCore" Version="2.12.46"/>
     </ItemGroup>
