--- a/Identity/Identity.WebHost/Identity.WebHost.csproj
+++ b/Identity/Identity.WebHost/Identity.WebHost.csproj
@@ -31,4 +31,8 @@
         <ProjectReference Include="..\Modules\Users\Users.Infrastructure\Users.Infrastructure.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <InternalsVisibleTo Include="Identity.IntegrationTests"/>
+    </ItemGroup>
+
 </Project>
