--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -10,6 +10,7 @@
         <PackageVersion Include="MediatR" Version="14.0.0"/>
         <PackageVersion Include="Microsoft.AspNetCore.Identity" Version="2.3.9"/>
         <PackageVersion Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="10.0.3"/>
+        <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="10.0.3"/>
         <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="10.0.3"/>
         <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="10.0.3"/>
         <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.3"/>
@@ -21,5 +22,7 @@
         <PackageVersion Include="NUnit3TestAdapter" Version="6.1.0"/>
         <PackageVersion Include="OneOf" Version="3.0.271"/>
         <PackageVersion Include="Scalar.AspNetCore" Version="2.12.46"/>
+        <PackageVersion Include="Testcontainers" Version="4.10.0"/>
+        <PackageVersion Include="Testcontainers.PostgreSql" Version="4.10.0"/>
     </ItemGroup>
 </Project>
