--- a/Identity/Identity.WebHost/Dockerfile
+++ b/Identity/Identity.WebHost/Dockerfile
@@ -8,6 +8,7 @@ FROM mcr.microsoft.com/dotnet/sdk:10.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["Directory.Packages.props", "."]
+COPY ["Directory.Build.props", "."]
 COPY ["Identity/Identity.WebHost/Identity.WebHost.csproj", "Identity/Identity.WebHost/"]
 RUN dotnet restore "Identity/Identity.WebHost/Identity.WebHost.csproj"
 COPY . .
