--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -5,6 +5,8 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageVersion Include="Aspire.Hosting.PostgreSQL" Version="13.1.1"/>
+        <PackageVersion Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.4.0"/>
+        <PackageVersion Include="Azure.Identity" Version="1.18.0"/>
         <PackageVersion Include="FluentValidation" Version="12.1.1"/>
         <PackageVersion Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.1"/>
         <PackageVersion Include="MediatR" Version="14.0.0"/>
