--- a/Identity/Identity.WebHost/Identity.WebHost.csproj
+++ b/Identity/Identity.WebHost/Identity.WebHost.csproj
@@ -5,6 +5,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets"/>
+        <PackageReference Include="Azure.Identity"/>
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions"/>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
