--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -19,10 +19,15 @@
         <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="18.3.0"/>
         <PackageVersion Include="Moq" Version="4.20.72"/>
         <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0"/>
+        <PackageVersion Include="Npgsql.OpenTelemetry" Version="10.0.1"/>
         <PackageVersion Include="NUnit" Version="4.5.0"/>
         <PackageVersion Include="NUnit.Analyzers" Version="4.11.2"/>
         <PackageVersion Include="NUnit3TestAdapter" Version="6.1.0"/>
         <PackageVersion Include="OneOf" Version="3.0.271"/>
+        <PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.15.0"/>
+        <PackageVersion Include="OpenTelemetry.Extensions.Hosting" Version="1.15.0"/>
+        <PackageVersion Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.15.0"/>
+        <PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.15.0"/>
         <PackageVersion Include="Scalar.AspNetCore" Version="2.12.47"/>
         <PackageVersion Include="Testcontainers" Version="4.10.0"/>
         <PackageVersion Include="Testcontainers.PostgreSql" Version="4.10.0"/>
