--- a/Identity/Identity.WebHost/appsettings.json
+++ b/Identity/Identity.WebHost/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "OTEL_EXPORTER_OTLP_ENDPOINT": "https://otel.tikalonline.com:4318",
+  "OTEL_EXPORTER_OTLP_PROTOCOL": "http/protobuf",
+  "OTEL_SERVICE_NAME": "Identity"
 }
