fix: otel config points to correct endpoint

--- a/Identity/Identity.WebHost/appsettings.Development.json
+++ b/Identity/Identity.WebHost/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "OTEL_EXPORTER_OTLP_ENDPOINT": "",
+  "OTEL_EXPORTER_OTLP_PROTOCOL": "",
+  "OTEL_SERVICE_NAME": ""
 }
