--- a/Identity/Identity.WebHost/appsettings.json
+++ b/Identity/Identity.WebHost/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "OTEL_EXPORTER_OTLP_ENDPOINT": "https://otel.tikalonline.com:4318",
+  "OTEL_EXPORTER_OTLP_ENDPOINT": "https://otel.tikalonline.com",
   "OTEL_EXPORTER_OTLP_PROTOCOL": "http/protobuf",
   "OTEL_SERVICE_NAME": "Identity"
 }
